--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -39,6 +39,20 @@ layout: default
           <div class="clearfix">
             {{ content }}
           </div>
+
+          <!-- Social -->
+          {%- if page.social %}
+          <div class="social">
+            <div class="contact-icons">
+              {% include social.html %}
+            </div>
+
+            <div class="contact-note">
+              {{ site.contact_note }}
+            </div>
+
+          </div>
+        {%- endif %}
         </article>
 
 </div>
